# openclaw-android-port

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_GAP.md  LICENSE  README.md  README_part.txt  ROADMAP.md  SECURITY.md  changelog_check.txt  emoji_scan.txt  fix_encoding.py  fix_encoding_v2.py  fix_error_handling.py  fix_final.py  fix_kotlin.py  fix_status.py  hardcoded_strings.txt  patch_v240.py  scan_all.py  scan_all_v2.py  scan_emoji.py  scan_encoding.py  scan_hardcoded.py  scan_results.txt  set_243.py  set_244.py  set_version.py  update_version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
engine/: android-engine-poc.ts  android-entry-real.ts  android-entry.ts  android-poc.ts  minimal-gateway.ts
engine/stubs/: node-pty-stub.ts  noop-stub.ts  playwright-stub.ts  sharp-stub.ts
poc-app/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  install_miui.ps1  keystore.properties  settings.gradle.kts  test_phase2.ps1  test_phase3.ps1  test_v5.ps1
poc-app/app/: build.gradle.kts  proguard-rules.pro
poc-app/app/src/main/: AndroidManifest.xml
poc-app/app/src/main/assets/openclaw-engine/: MEMORY.md  SOUL.md  android-gateway.cjs  openclaw.json
poc-app/app/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
poc-app/test-data/config/: openclaw.json
scripts/: bundle-android-engine.mjs  bundle-poc.mjs  bundle-real-gateway.mjs  package-full-engine.mjs
(+65 files in other folders)
